--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,69 @@
 version: '3.8'
 
 services:
+  # PostgreSQL Database
+  postgres:
+    image: postgres:15-alpine
+    container_name: chatbot-postgres
+    environment:
+      POSTGRES_DB: chatbot_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+    ports:
+      - '5432:5432'
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
+    networks:
+      - chatbot-network
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # Redis Cache
+  redis:
+    image: redis:7-alpine
+    container_name: chatbot-redis
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis_data:/data
+    networks:
+      - chatbot-network
+    healthcheck:
+      test: ['CMD', 'redis-cli', 'ping']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   # NestJS Application
   app:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: chatbot-app
     ports:
       - '3000:3000'
     environment:
       - NODE_ENV=development
-      - PORT=3000
       - DB_HOST=postgres
       - DB_PORT=5432
       - DB_USERNAME=postgres
-      - DB_PASSWORD=postgres123
+      - DB_PASSWORD=password
       - DB_DATABASE=chatbot_db
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - REDIS_PASSWORD=
-      - REDIS_DB=0
+      - JWT_SECRET=your-super-secret-jwt-key-change-in-production
+      - JWT_EXPIRES_IN=1h
       - THROTTLE_TTL=60
       - THROTTLE_LIMIT=100
-      - JWT_SECRET=your-super-secret-jwt-key-change-in-production
-      - LOG_LEVEL=debug
+      # Configure AI API keys as needed
+      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - GOOGLE_AI_API_KEY=${GOOGLE_AI_API_KEY}
     depends_on:
       postgres:
         condition: service_healthy
@@ -34,72 +74,12 @@ services:
       - /app/node_modules
     networks:
       - chatbot-network
-    restart: unless-stopped
-
-  # PostgreSQL Database
-  postgres:
-    image: postgres:15-alpine
-    ports:
-      - '5432:5432'
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres123
-      - POSTGRES_DB=chatbot_db
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
-    networks:
-      - chatbot-network
-    restart: unless-stopped
+    command: npm run start:dev
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U postgres -d chatbot_db']
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  # Redis Cache
-  redis:
-    image: redis:7-alpine
-    ports:
-      - '6379:6379'
-    command: redis-server --appendonly yes
-    volumes:
-      - redis_data:/data
-    networks:
-      - chatbot-network
-    restart: unless-stopped
-    healthcheck:
-      test: ['CMD', 'redis-cli', 'ping']
-      interval: 10s
-      timeout: 3s
+      test: ['CMD', 'curl', '-f', 'http://localhost:3000/health']
+      interval: 30s
+      timeout: 10s
       retries: 3
-
-  # Redis Commander (Web UI for Redis)
-  redis-commander:
-    image: rediscommander/redis-commander:latest
-    ports:
-      - '8081:8081'
-    environment:
-      - REDIS_HOSTS=local:redis:6379
-    depends_on:
-      - redis
-    networks:
-      - chatbot-network
-    restart: unless-stopped
-
-  # pgAdmin (Database Management)
-  pgadmin:
-    image: dpage/pgadmin4:latest
-    ports:
-      - '5050:80'
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@chatbot.com
-      - PGADMIN_DEFAULT_PASSWORD=admin123
-    depends_on:
-      - postgres
-    networks:
-      - chatbot-network
-    restart: unless-stopped
 
 volumes:
   postgres_data:
