--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,11 @@ services:
     environment:
       POSTGRES_DB: chatbot_db
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: postgres123
     ports:
       - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     networks:
       - chatbot-network
     healthcheck:
@@ -51,7 +50,7 @@ services:
       - DB_HOST=postgres
       - DB_PORT=5432
       - DB_USERNAME=postgres
-      - DB_PASSWORD=password
+      - DB_PASSWORD=postgres123
       - DB_DATABASE=chatbot_db
       - REDIS_HOST=redis
       - REDIS_PORT=6379
@@ -74,7 +73,6 @@ services:
       - /app/node_modules
     networks:
       - chatbot-network
-    command: npm run start:dev
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:3000/health']
       interval: 30s
